[gd_scene load_steps=12 format=2]

[ext_resource path="res://arena/mat/bricks/brick_8.png" type="Texture" id=1]
[ext_resource path="res://arena/bricks/Exploder.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=14]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13, 13 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 20, 21 )

[sub_resource type="Animation" id=19]
resource_name = "outro"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../part_Blowup:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0, 0.0822368, 0.654605, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=16]
gradient = SubResource( 15 )

[sub_resource type="Curve" id=20]
max_value = 200.0
_data = [ Vector2( 0, 30.2273 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=21]
curve = SubResource( 20 )

[sub_resource type="ParticlesMaterial" id=12]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 16, 16, 16 )
flag_disable_z = true
direction = Vector3( 1, 1, 1 )
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 6.25
linear_accel_random = 1.0
linear_accel_curve = SubResource( 21 )
radial_accel = 4.25
scale = 3.0
color_ramp = SubResource( 16 )

[node name="Exploder" type="StaticBody2D" groups=["exploders", "level_items"]]
position = Vector2( 1200, 676 )
collision_layer = 4
collision_mask = 3
physics_material_override = SubResource( 14 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="ForceField" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ForceField"]
shape = SubResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ForceField")
anims/outro = SubResource( 19 )

[node name="part_Blowup" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.916667 )
emitting = false
amount = 300
lifetime = 2.0
one_shot = true
speed_scale = 5.0
explosiveness = 0.76
randomness = 1.0
process_material = SubResource( 12 )

[connection signal="body_entered" from="ForceField" to="." method="_on_ForceField_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
